# rmf_human_detector_oakd

./: CMakeLists.txt  README.md  package.xml  plugins.xml
launch/: human_detector.launch.xml
src/: HumanDetector.cpp  HumanDetector.hpp  OakDHumanDetector.cpp  OakDHumanDetector.hpp
